syntax = "proto3";
package runecraftstudios.pastello.auth.session.v1;


option go_package = "github.com/runecraft-studios/pastello/internal/gen/runecraftstudios/pastello/auth/session/v1;sessionv1";

message StartUserSessionRequest { string client_version = 1; }
message StartUserSessionResponse {
  string session_id = 1;
  string user_id = 2;
  string created_at = 3;
}
